--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "sweetalert2": "^7.28.4",
+    "tronweb": "^2.1.32"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "move-cli": "^1.2.0",
+    "rimraf": "^2.6.2",
+    "solc": "^0.4.25"
   },
   "scripts": {
     "start": "react-scripts start",
